<resources>
    <string name="app_name">practica08</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <!-- Opciones del menu lateral -->
    <string name="informacion">Información</string>
    <string name="productos">Productos</string>
    <string name="contacto">Contacto</string>

    <!-- Formulario de contacto -->
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Número de teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="comentario">Comentario</string>

    <!-- Lista de productos -->
    <string-array name="lstProductos">
        <item>Brocas para metal</item>
        <item>Destornillador eléctrico</item>
        <item>Escalera</item>
        <item>Cinta adhesiva</item>
        <item>Cepillo eléctrico</item>
        <item>Prensa</item>
        <item>Machuelos</item>
        <item>Formón</item>
        <item>Manguera para jardín</item>
        <item>Remaches</item>
    </string-array>

    <!-- Fragment Información -->
    <string name="ubicacion">Av. Francisco I. Madero 2332 Poniente, Centro, Monterrey, Nuevo León C.P. 6400</string>
    <string name="tipo">Ferretería para uso genérico</string>
    <string name="nombre_ferreteria">Protosa</string>
    <string name="correo_ferreteria">protosa@gmail.com</string>
    <string name="mision">Brindar soluciones confiables en herramientas y materiales de construcción, ofreciendo productos de alta calidad y un servicio al cliente excepcional, para contribuir al desarrollo de proyectos de nuestros clientes, desde pequeñas reparaciones hasta grandes construcciones.</string>
    <string name="vision">Ser la ferretería de referencia en la comunidad, reconocida por su amplio surtido de productos, asesoramiento experto y compromiso con la satisfacción del cliente, fomentando relaciones duraderas y contribuyendo al crecimiento sostenible del sector de la construcción.</string>

</resources>