<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:iconTint="@color/green_dark"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/informacion" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contacto" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_prods"
            android:title="@string/productos" />
    </group>
</menu>