<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dusty">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="158dp"
        android:layout_height="164dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/protosa_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2" />

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="245dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_ferreteria"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textColorHint="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textColorHint="@color/green_dark"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/correo"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textColorHint="@color/green_dark"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

    <TextView
        android:id="@+id/txtComentario"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/comentario"
        android:textColor="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCorreo" />

    <Spinner
        android:id="@+id/spnProds"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComentario" />

    <EditText
        android:id="@+id/etComentario"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Deja un comentario"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textColorHint="@color/green_dark"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnProds" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green_dark"
        android:onClick="addData"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etComentario"
        app:layout_constraintVertical_bias="0.738"
        app:tint="@color/dusty" />

</androidx.constraintlayout.widget.ConstraintLayout>