<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dusty">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="192dp"
        android:layout_height="183dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/protosa_logo" />

    <TextView
        android:id="@+id/txtAppname"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre_ferreteria"
        android:textAlignment="center"
        android:textColor="@color/green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:text="@string/ubicacion"
        android:textAlignment="center"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppname" />

    <TextView
        android:id="@+id/txtMisionSubtitulo"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Misión"
        android:textColor="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtUbicacion" />

    <TextView
        android:id="@+id/txtMision"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:text="@string/mision"
        android:textAlignment="center"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMisionSubtitulo" />

    <TextView
        android:id="@+id/txtVisionSubtitulo"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Visión"
        android:textColor="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMision" />

    <TextView
        android:id="@+id/txtVision"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:text="@string/vision"
        android:textAlignment="center"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVisionSubtitulo" />
</androidx.constraintlayout.widget.ConstraintLayout>